--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </body>
     <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function() {
-      var URL = "2PACX-1vQU5X090r-6BUao6xE7klXzJRthVzTJcMufCvEzWajSdQ2Qfp1Nt5gxkNwI9smtVHdaws9k2RHKvIPR"
+      var URL = "http://elearning.aelb.gov.my/takwin"
       Tabletop.init( { key: URL, callback: generateCalendar, simpleSheet: true } )
     })
   </script>
