--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <h1>NodeSchool Events</h1>
   <div id="calendar-goes-here"></div>
-  <small>Add events to this <a href="https://docs.google.com/a/github.com/spreadsheet/ccc?key=0AuOjlXjUrSbAdE1XRFJkeEJZQ1NSelhILUR0NXdBWUE#gid=0&output=json" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
+  <small>Add events to this <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQU5X090r-6BUao6xE7klXzJRthVzTJcMufCvEzWajSdQ2Qfp1Nt5gxkNwI9smtVHdaws9k2RHKvIPR/pubhtml" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
 
   </body>
     <script type="text/javascript">
