--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-  <h1>NodeSchool Events</h1>
+  <h1>Takwim Atom Malaysia</h1>
   <div id="calendar-goes-here"></div>
   <small>Add events to this <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQU5X090r-6BUao6xE7klXzJRthVzTJcMufCvEzWajSdQ2Qfp1Nt5gxkNwI9smtVHdaws9k2RHKvIPR/pubhtml" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
 
