--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
   <h1>Takwim Atom Malaysia</h1>
   <div id="calendar-goes-here"></div>
-  <small>Add events to this <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQU5X090r-6BUao6xE7klXzJRthVzTJcMufCvEzWajSdQ2Qfp1Nt5gxkNwI9smtVHdaws9k2RHKvIPR/pubhtml" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
+  <small>Add events to this <a href="https://docs.google.com/spreadsheets/d/1zoZ_hYueEprTgju2Z6xHQ-2j38Wz_KroTPkC8vx2NtY/edit#gid=0&output=json" target="_blank">spreadsheet</a>. Visit the GitHub <a href="http://www.github.com/jlord/sheetsee-calendar">repository</a>.</small>
 
   </body>
     <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function() {
-      var URL = "http://elearning.aelb.gov.my/takwin"
+      var URL = "1zoZ_hYueEprTgju2Z6xHQ-2j38Wz_KroTPkC8vx2NtY"
       Tabletop.init( { key: URL, callback: generateCalendar, simpleSheet: true } )
     })
   </script>
