--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </body>
     <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function() {
-      var URL = "1zoZ_hYueEprTgju2Z6xHQ-2j38Wz_KroTPkC8vx2NtY"
+      var URL = "https://docs.google.com/spreadsheets/d/1zoZ_hYueEprTgju2Z6xHQ-2j38Wz_KroTPkC8vx2NtY/edit#gid=0&output=json"
       Tabletop.init( { key: URL, callback: generateCalendar, simpleSheet: true } )
     })
   </script>
